fix for bug #188051.  IMAP mark as read sends DeleteOrMoveMsgCompleted event. thanks to bienvenu for the fix.  r/sr=sspitzer, asa.